<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rect_white_dialog_common"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/uper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dilog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/dialog_header_bg"
            android:fontFamily="@font/myriadprobold"
            android:gravity="center"
            android:minWidth="@dimen/margin_330"
            android:minHeight="@dimen/_40sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:fontFamily="@font/myriadproregular"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/app_name"
                    android:textAllCaps="false"
                    android:textColor="@color/dilog_mesg"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:minHeight="@dimen/_40sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/dialog_negative_button"
            android:fontFamily="@font/myriadproregular"
            android:gravity="center"
            android:minWidth="@dimen/_100sdp"
            android:padding="@dimen/_6sdp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/dialog_positive_button"
            android:fontFamily="@font/myriadproregular"
            android:gravity="center"
            android:minWidth="@dimen/_100sdp"
            android:padding="@dimen/_6sdp"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</LinearLayout>
